--- a/🙋‍♂Customer_Segmentation_with_Clustering_Analysis_Python.ipynb
+++ b/🙋‍♂Customer_Segmentation_with_Clustering_Analysis_Python.ipynb
@@ -1022,16 +1022,51 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 1"
+        "After that's done we can now begin our EDA. An effective EDA always has three stages, as I mentioned above. Again, they are as follows:\n",
+        "\n",
+        "Univariate Analysis\n",
+        "\n",
+        "Bivariate Analysis.\n",
+        "\n",
+        "Multivariate Analysis."
       ],
       "metadata": {
-        "id": "0wOQAZs5pc--"
+        "id": "wnwZ61ldVOOZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "univariate analysis involves examining individual features in order to gain insights into their characteristics. This preliminary step helps in understanding the dataset better and identifying any patterns or anomalies present in a single variable. Let's apply this concept to the task of analyzing the distribution of customer ages in the dataset.\n",
+        "\n",
+        "\n",
+        "To begin, we will explore the age distribution of customers within the dataset. This involves computing various descriptive statistics and visualizing the distribution to gain insights into the age demographics of the customer base. This information can be useful for making data-driven decisions and tailoring marketing strategies."
+      ],
+      "metadata": {
+        "id": "lGRLSmD4ViVn"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import plotly.express as px\n",
+        "\n",
+        "\n",
+        "# Create a histogram plot to visualize the distribution of customer ages\n",
+        "# We use the 'histplot' function from Seaborn and specify the DataFrame 'df' and the column 'Age'\n",
+        "# We also set the 'x' parameter to \"Age\" and define the number of bins using the 'bins' parameter\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.histplot(data=df, x=\"Age\", bins=list(range(10, 150, 10)))\n",
+        "\n",
+        "# Add title and labels to the plot\n",
+        "plt.title(\"Distribution of Customer's Age\")\n",
+        "plt.xlabel(\"Age\")\n",
+        "plt.ylabel(\"Frequency\")\n",
+        "\n",
+        "# Display the plot\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
@@ -1042,74 +1077,90 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 1. Why did you pick the specific chart?"
+        "We can see from the above summary that most of the customers belong in the age range of 40-60."
       ],
       "metadata": {
-        "id": "K5QZ13OEpz2H"
+        "id": "RfUh0dpGXx1U"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "10: This is the starting value for the range of bins in the histogram. It means that the first bin will start at the value 10.\n",
+        "\n",
+        "150: This is the ending value for the range of bins in the histogram. It means that the last bin will end at the value 150.\n",
+        "\n",
+        "10: This is the step size or interval between each bin. In this case, bins will be created for each range of 10 units. So, the bins will be [10-20), [20-30), [30-40), and so on, until [140-150)."
       ],
       "metadata": {
-        "id": "XESiWehPqBRc"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "lQ7QKXXCp7Bj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "C_j1G7yiqdRP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "448CDAPjqfQr"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "3cspy4FjqxJW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 2"
-      ],
-      "metadata": {
-        "id": "KSlN3yHqYklG"
+        "id": "j52KcEY9WSJ8"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code"
+        "sns.countplot(data=df, x=\"Is_Parent\")\n",
+        "plt.title(\"Distribution of Family Size\")\n",
+        "plt.xlabel(\"Family Size\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.show()"
       ],
       "metadata": {
-        "id": "R4YgtaqtYklH"
+        "id": "xGIH6HjkXXaN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.countplot(data=df, x=\"Childrens\")\n",
+        "plt.title(\"Distribution of Family Size\")\n",
+        "plt.xlabel(\"Family Size\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "F4IA2blwXSFm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.countplot(data=df, x=\"Family_Size\")\n",
+        "plt.title(\"Distribution of Family Size\")\n",
+        "plt.xlabel(\"Family Size\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Vz5EFpKqWy_1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.histplot(data=df, x=\"Living_With\")\n",
+        "plt.title(\"Distribution of Customer's Age\")"
+      ],
+      "metadata": {
+        "id": "LGBD0t77Wo8N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.histplot(data=df, x=\"Education\")\n",
+        "plt.title(\"Distribution of Customer's Age\")"
+      ],
+      "metadata": {
+        "id": "40AuVCQEWgmD"
       },
       "execution_count": null,
       "outputs": []
@@ -1117,374 +1168,49 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "t6dVpIINYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "5aaW0BYyYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "ijmpgYnKYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "PSx9atu2YklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "-JiQyfWJYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "BcBbebzrYklV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 3"
-      ],
-      "metadata": {
-        "id": "EM7whBJCYoAo"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 3 visualization code"
-      ],
-      "metadata": {
-        "id": "t6GMdE67YoAp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "fge-S5ZAYoAp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "5dBItgRVYoAp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "85gYPyotYoAp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "4jstXR6OYoAp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "RoGjAbkUYoAp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "zfJ8IqMcYoAp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 4"
-      ],
-      "metadata": {
-        "id": "4Of9eVA-YrdM"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 4 visualization code"
-      ],
-      "metadata": {
-        "id": "irlUoxc8YrdO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "iky9q4vBYrdO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "aJRCwT6DYrdO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "F6T5p64dYrdO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "Xx8WAJvtYrdO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "y-Ehk30pYrdP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "jLNxxz7MYrdP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 5"
-      ],
-      "metadata": {
-        "id": "bamQiAODYuh1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 5 visualization code"
-      ],
-      "metadata": {
-        "id": "TIJwrbroYuh3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "QHF8YVU7Yuh3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "dcxuIMRPYuh3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "GwzvFGzlYuh3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "uyqkiB8YYuh3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "qYpmQ266Yuh3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "_WtzZ_hCYuh4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 6"
-      ],
-      "metadata": {
-        "id": "OH-pJp9IphqM"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 6 visualization code"
-      ],
-      "metadata": {
-        "id": "kuRf4wtuphqN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "bbFf2-_FphqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "loh7H2nzphqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "_ouA3fa0phqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "VECbqPI7phqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "Seke61FWphqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "DW4_bGpfphqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 7"
+        "#### Bivariate Analysis"
       ],
       "metadata": {
         "id": "PIIx-8_IphqN"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "the next step involves bivariate analysis, where we delve into the comparison of two attributes simultaneously. This analytical approach allows us to uncover potential relationships, correlations, or patterns between different pairs of attributes.\n",
+        "\n",
+        "\n",
+        "In our current project, our focus will be on various forms of bivariate analysis. One example entails examining the average total expenditure across distinct client age groups. Additionally, we will explore the potential correlation between a customer's income and their total amount spent on various products"
+      ],
+      "metadata": {
+        "id": "CQRZancoYRoc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Chart - 7 visualization code"
+        "# Chart - 7 visualization code\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.scatterplot(data=df, x=\"Income\", y=\"TotalAmountSpent\")\n",
+        "plt.title(\"Relationship between Customer's Income and Total Amount Spent\")\n",
+        "plt.xlabel(\"Income\")\n",
+        "plt.ylabel(\"Total Amount Spent\")\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "lqAIGUfyphqO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Maybe the inverse would be more clear\n",
+        "count_plot(feature='Age Range', df=df, colors=custom_colors, hue='Gender')"
+      ],
+      "metadata": {
+        "id": "OedLZTp0Z74F"
       },
       "execution_count": null,
       "outputs": []
